# matrix_calls

./: docker-compose.yml  package-lock.json  package.json
matrix_calls_client/: .gitignore  package-lock.json  package.json  svelte.config.js  vite.config.js  vite.config.ts
matrix_calls_client/cert/: cert.pem  key.pem
matrix_calls_client/prisma/: dev.db  schema.prisma
matrix_calls_client/prisma/migrations/20240519221909_dam/: migration.sql
matrix_calls_client/prisma/migrations/20240519235846_dammm/: migration.sql
matrix_calls_client/src/: app.html  hooks.server.ts
matrix_calls_client/src/lib/: messages.ts  user.ts
matrix_calls_client/src/routes/: +layout.server.ts  +layout.svelte  +page.svelte
matrix_calls_client/src/routes/contacts/: +page.svelte
matrix_calls_server/: .env  .null-ls_850254_main.ts  Cargo.toml  main.ts  package-lock.json  package.json  prisma.ts  server.py
matrix_calls_server/cert/: cert.pem  key-rsa.pem  key.pem
matrix_calls_server/prisma/: haha_this_is_db.db  haha_this_is_db.db-journal  schema.prisma
matrix_calls_server/prisma/migrations/20240122201904_init/: migration.sql
matrix_calls_server/src/: client_handle.rs  main.rs  messages.rs  requests.rs  server.rs
